@@ -367,14 +367,14 @@ REAL QuadInterp(REAL x, REAL x0, REAL x1, REAL x2, REAL y0, REAL y1, REAL y2){
 
 }//End Function
 
-/* Function getToffSet()
+/* Function get_time_offset()
  * ------------------
  * Returns the time offset in days between two time strings - starttime and basetime
  * 
  * The time string format is: yyyymmdd.HHMMSS (15 characters)
  * Uses the time.h libraries
  */
-REAL getToffSet(char basetime[15], char starttime[15]){
+REAL get_time_offset(char* basetime, char* starttime){
 	
     REAL t;
     //char *strptime(const char *buf, const char *format, struct tm *tm) 
@@ -389,6 +389,7 @@ REAL getToffSet(char basetime[15], char starttime[15]){
 
     strptime(basetime,"%Y%m%d.%H%M%S",&tm0);
     strptime(starttime,"%Y%m%d.%H%M%S",&tm1);
+    
     
     t0 = mktime(&tm0);
     t1 = mktime(&tm1);
